# lektprojekt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yaml  dependabot.yml
.github/workflows/: build-backend.yaml  build-backend.yml  build-frontend.yaml  build-frontend.yml  build.yaml  test-backend.yaml  test-backend.yml
assets/: README  expenses
assets/aws/: lektprojekt-audio.policy.json
backend/: .dockerignore  .gitignore  Dockerfile  conftest.py  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  uwsgi.ini
backend/assets/: test_fixture.json  voices.json
backend/lekt/: __init__.py  admin.py  apps.py  checks.py  constants.py  filters.py  managers.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/lekt/loaders/: __init__.py  language.py  loaders.py
backend/lekt/management/commands/: compute_search_scores.py  compute_search_weights.py  load_corpus.py  load_languages.py  load_views.py  load_voices.py  print_stats.py
backend/lekt/migrations/: 0001_initial.py  0002_auto_20201220_2234.py  0002_auto_20210110_0339.py  0002_auto_20210210_2041.py  0002_auto_20210827_1416.py  0002_initialize_aws_languages.py  0003_auto_20201216_0558.py  0003_auto_20201220_2234.py  0003_auto_20210110_0636.py  0003_auto_20210210_2204.py  0003_auto_20210827_1525.py  0003_lexemeweight.py  0004_auto_20210110_0831.py  0004_auto_20210210_2226.py  0004_observableweight_asdf.py  0005_auto_20210110_1101.py  0005_auto_20210213_2128.py  0005_auto_20210827_1535.py  0006_auto_20210115_1407.py  0006_auto_20210213_2139.py  0006_auto_20210827_1540.py  0007_trackedlist_name.py  0008_auto_20210214_2343.py  0009_auto_20210215_1517.py  0010_auto_20210215_1629.py  0011_auto_20210217_1549.py  0012_auto_20210217_2040.py  0013_auto_20210225_0826.py  0014_add_primary_keys_to_children.py  0014_add_site.py  0015_language_active.py  0016_auto_20210316_2018.py  0017_auto_20210316_2023.py  0018_auto_20210318_1927.py  0019_auto_20210720_1609.py  0020_userprofile_level.py  0021_auto_20210724_0610.py  0022_auto_20210802_1832.py  0023_auto_20210802_2204.py  0024_alter_userprofile_checkout_sessions.py  (+1 more)
backend/lekt/sql/: common.sql  create_feature_idf.sql  create_feature_tf.sql  create_lexeme_idf.sql  create_lexeme_tf.sql  create_observable_idf.sql  create_observable_tf.sql  search.sql  update_feature_weight.sql  update_lexeme_weight.sql  update_observable_weight.sql  views.sql
backend/main/: adapter.py  apps.py  asgi.py  authentication.py  context_processors.py  decorators.py  forms.py  managers.py  middleware.py  models.py  serializers.py  settings.py  signals.py  tests.py  urls.py  views.py  webhooks.py  wsgi.py
backend/main/management/commands/: build_docs.py  create_site.py  docker_build.py  pgcli.py
backend/main/migrations/: 0001_initial.py  0002_auto_20210804_1529.py  0003_alter_user_level.py  0004_user_has_profile_image.py
backend/main/settings/: __init__.py  api.py  auth.py  base.py  database.py  dev.py  development.py  extra.py  logging.py  prod.py  production.py  sentry.py  templates.py  test.py
backend/main/sql/: utils.sql
backend/templates/: base.html  password_reset_confirm.html
backend/templates/fragments/: password_reset_confirm_form.html  password_reset_script.js
backend/utils/: pg_explain_lexer.py
deployment/: nginx.conf  nginx.site.conf
docs/: Makefile  authentication.rst  backend.rst  conf.py  contributing.md  contributing.rst  frontend.md  frontend.rst  index.rst  ops.rst  principle.md  principle.rst  proposal.md  proposal.rst  testing.rst
frontend/: .env  .gitignore  Dockerfile  cypress.json  default.conf  index.html  package-lock.json  package.json  tsconfig.json
frontend/config/: env.js  paths.js  utils.js  webpack.config.js
frontend/cypress/: global.d.ts  (+3 more)
kubernetes/: AmazonEKSEBSCSIDriverPolicy.json  box-deployment.yml  cache-service.yaml  clusterconfig.yaml  clusterconfig.yml  ingress.yaml  ingress.yml  lektprojekt-assets-pv.yaml  lektprojekt-assets-pv.yml  lektprojekt-assets-pvc.yml  rdb-service.yml
scripts/: .gitignore  build-docs-hook.sh  eslint-hook.sh  install-hooks.sh  loader_907.py  rename.py
(+315 files in other folders)
