[tool.poetry]
name = "lektprojekt-server"
version = "0.1.0"
description = "LektProjekt Application Server"
authors = ["Paweł Sacawa <psacawa@math.toronto.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
django-allauth = "^0.44.0"
django-configurations = "^2.2"
django-extensions = "^3.1.0"
django-filter = "^2.4.0"
django-split-settings = "^1.0.1"
djangorestframework = "^3.12.2"
colored-traceback = "^0.3.0"
dj-rest-auth = "^2.1.2"
psycopg2 = "^2.8.6"
drf-yasg = "^1.20.0"
django-model-utils = "^4.1.1"
django-polymorphic = "^3.0.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2"
ipython = "^7.19.0"
progress = "^1.5"
tabulate = "^0.8.7"
pre-commit = "^2.9.3"
mypy = "^0.790"
pylint = "^2.6.0"
black = "^20.8b1"
Sphinx = "^3.4.0"
sphinx-rtd-theme = "^0.5.0"
spacy = "^2.3.5"
recommonmark = "^0.7.1"
pytest = "^6.2.1"
pytest-watch = "^4.2.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.10.1"
pytest-django = "^4.1.0"
assertpy = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
# multi_line_output = 3

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"
addopts = "--reuse-db"

python_files = ["*_test.py", "tests.py"]
python_classes = "*Test"
python_functions = "*_test"
required_plugins = ["pytest-django==4.1.0", "pytest-cov==2.10.1"]

filterwarnings = "ignore::Warning"
