[tool.poetry]
name = "lekt-backend"
version = "0.0.2"
description = "LektProjekt Application Server"
authors = ["Paweł Sacawa <psacawa@math.toronto.edu>"]
license  = "Copyright 2021 Paweł Sacawa"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
django-allauth = "^0.45.0"
django-configurations = "^2.2"
django-extensions = "^3.1.0"
django-filter = "^2.4.0"
django-split-settings = "^1.1.0"
djangorestframework = "^3.12.2"
colored-traceback = "^0.3.0"
dj-rest-auth = "^2.1.2"
psycopg2 = "^2.8.6"
drf-yasg = "^1.20.0"
django-model-utils = "^4.1.1"
django-polymorphic = "^3.0.0"
colorama = "^0.4.4"
django-redis = "^5.0.0"
django-rest-polymorphic = "^0.1.9"
drf-flex-fields = "^0.9.1"
django-ses = "^2.2.1"
drf-nested-routers = "^0.93.3"
tabulate = "^0.8.9"
spacy = "^3.0.1"
progress = "^1.5"
ipython = "^7.26.0"
gunicorn = "^20.1.0"
sentry-sdk = "^1.3.0"
dj-stripe = "^2.5.1"
python-dotenv = "^0.19.0"
django-cors-headers = "^3.8.0"
docutils = "^0.17.1"
shtab = "^1.4.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2"
pre-commit = "^2.14.0"
mypy = "^0.910"
pylint = "^2.10.2"
black = "^21.7b0"
Sphinx = "^3.4.0"
sphinx-rtd-theme = "^0.5.0"
recommonmark = "^0.7.1"
pytest = "^6.2.1"
pytest-watch = "^4.2.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.10.1"
pytest-django = "^4.1.0"
assertpy = "^1.1"
jq = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
# multi_line_output = 3

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"
addopts = "--reuse-db"

python_files = ["*_test.py", "tests.py"]
python_classes = "*Test"
python_functions = "*_test"
required_plugins = ["pytest-django>=4.1.0", "pytest-cov>=2.10.1"]

filterwarnings = "ignore::Warning"
